# nearest-neighbor-poc

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
infra/: Dockerfile
resources/: dados-entrada.txt  vizinho-mais-proximo.csv
src/: main.c  nearest-neighbor.c  nearest-neighbor.h
